samples/_failures_safe/1761084086_0aa8e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86796203.c: In function ‘main’:
./samples/SAFE/__tmp_86796203.c:143:5: error: expected declaration or statement at end of input
  143 |     printf("\n");
      |     ^~~~~~
